--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -307,3 +307,9 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+
+.devicon {
+  width: 60px;
+  height: 60px;
+}
+
