--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -26,6 +26,7 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
+
 @media (min-width: 768px) {
   p {
     margin: 0 0 35px;
@@ -33,6 +34,7 @@ p {
     line-height: 1.6;
   }
 }
+
 a {
   color: #42DCA3;
   -webkit-transition: all 0.2s ease-in-out;
@@ -112,6 +114,7 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
+
 .intro {
   display: table;
   width: 100%;
@@ -215,7 +218,7 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
+.project-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -235,7 +238,7 @@ a:focus {
   .content-section {
     padding-top: 250px;
   }
-  .download-section {
+  .project-section {
     padding: 100px 0;
   }
   #map {
@@ -346,7 +349,7 @@ body {
 }
 
 .face.back {
-  /*display: block;*/
+  display: block;
   transform: rotateY(180deg);
   box-sizing: border-box;
   padding: 20px;
@@ -354,8 +357,9 @@ body {
   line-height: 50px;
   text-align: center;
   background-color: black;
-  /*opacity: .7;*/
 }
+
+/*end developer icon styling*/
 
 
 
