--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -122,7 +122,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url("https://recruiterpoet.files.wordpress.com/2013/02/sail2.jpg") no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -323,7 +323,10 @@ body {
   width: 100px;
   height: 100px;
   z-index: 1;
-  padding: 75px;
+  /*padding: 75px;*/
+  padding-left: 75px;
+  padding-right: 75px;
+  padding-bottom: 50px;
 }
 
 #f1_container {
