--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -26,7 +26,6 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
-
 @media (min-width: 768px) {
   p {
     margin: 0 0 35px;
@@ -34,7 +33,6 @@ p {
     line-height: 1.6;
   }
 }
-
 a {
   color: #42DCA3;
   -webkit-transition: all 0.2s ease-in-out;
@@ -114,7 +112,6 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
-
 .intro {
   display: table;
   width: 100%;
@@ -122,7 +119,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url("https://recruiterpoet.files.wordpress.com/2013/02/sail2.jpg") no-repeat bottom center scroll;
+  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -218,7 +215,7 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.project-section {
+.download-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -238,7 +235,7 @@ a:focus {
   .content-section {
     padding-top: 250px;
   }
-  .project-section {
+  .download-section {
     padding: 100px 0;
   }
   #map {
@@ -311,6 +308,16 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 
+.single-item {
+  width: 75%;
+  height: 75%;
+}
+
+.single-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 /*developer icon styling */
 .devicon {
   width: 80%%;
@@ -323,10 +330,7 @@ body {
   width: 100px;
   height: 100px;
   z-index: 1;
-  /*padding: 75px;*/
-  padding-left: 75px;
-  padding-right: 75px;
-  padding-bottom: 50px;
+  padding: 75px;
 }
 
 #f1_container {
@@ -363,10 +367,3 @@ body {
 }
 
 /*end developer icon styling*/
-
-/*carousel styling*/
-.lazy {
-  width: 50%;
-}
-
-
