--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -212,10 +212,10 @@ a:focus {
     transform: scale(1);
   }
 }
-.content-section {
+.skills-section {
   padding-top: 100px;
 }
-.download-section {
+.projects-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -232,10 +232,10 @@ a:focus {
   margin-top: 100px;
 }
 @media (min-width: 767px) {
-  .content-section {
+  .skills-section {
     padding-top: 250px;
   }
-  .download-section {
+  .project-section {
     padding: 100px 0;
   }
   #map {
@@ -308,23 +308,6 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 
-.single-item {
-  width: 75%;
-  height: 75%;
-}
-
-.single-item img {
-  max-width: 100%;
-  max-height: 100%;
-  position: relative;
-}
-
-.project-text{
-  font-size: 16px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
-
 /*developer icon styling */
 .devicon {
   width: 80%%;
@@ -374,3 +357,40 @@ body {
 }
 
 /*end developer icon styling*/
+
+/*custom caurousel styling*/
+.carousel-image {
+   position: relative;
+   width: 100%; /* for IE 6 */
+}
+
+
+.single-item {
+  width: 75%;
+  height: 75%;
+}
+
+.single-item img {
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+}
+
+.project-text{
+  font-size: 16px;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+.fa {
+  padding-right: 2%;
+}
+
+.project-text a:hover {
+ color: #42DCA3;
+}
+
+.project-text a {
+  color: white;
+}
+
