--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -1,9 +1,9 @@
 @charset 'UTF-8';
 /* Slider */
-.slick-loading .slick-list
+/*.slick-loading .slick-list
 {
     background: #fff url('./ajax-loader.gif') center center no-repeat;
-}
+}*/
 
 /* Icons */
 @font-face
@@ -36,33 +36,12 @@
     transform: translate(0, -50%);
 
     cursor: pointer;
-
     color: transparent;
     border: none;
     outline: none;
     background: transparent;
 }
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover:before,
-.slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before
-{
-    opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
-    opacity: .25;
-}
+
 
 .slick-prev:before,
 .slick-next:before
@@ -71,7 +50,7 @@
     font-size: 20px;
     line-height: 1;
 
-    opacity: .75;
+    /*opacity: .75;*/
     color: white;
 
     -webkit-font-smoothing: antialiased;
