--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -226,6 +226,14 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
+.about-section {
+
+}
+
+.contact-section {
+
+}
+
 #map {
   width: 100%;
   height: 200px;
