--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -212,8 +212,8 @@ a:focus {
     transform: scale(1);
   }
 }
-.skills-section {
-  padding-top: 100px;
+.content-section {
+  padding-top: 80px;
 }
 .projects-section {
   width: 100%;
@@ -226,24 +226,16 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
-.about-section {
-
-}
-
-.contact-section {
-
-}
-
 #map {
   width: 100%;
   height: 200px;
   margin-top: 100px;
 }
 @media (min-width: 767px) {
-  .skills-section {
-    padding-top: 250px;
+  .content-section {
+    padding-top: 100px;
   }
-  .project-section {
+  .projects-section {
     padding: 100px 0;
   }
   #map {
@@ -328,7 +320,10 @@ body {
   width: 100px;
   height: 100px;
   z-index: 1;
-  padding: 75px;
+  padding-right: 75px;
+  padding-left: 75px;
+  /*padding-top: 40px;*/
+  padding-bottom: 50px;
 }
 
 #f1_container {
