--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -414,15 +414,24 @@ body {
 }
 
 /*end carousel styling*/
-
-#cf6_image {
+#cf2 {
+  position:relative;
+  height:50px;
+  width:50px;
   margin:0 auto;
-  width:450px;
-  height:281px;
-  transition: background-image 1s ease-in-out;
-  background-image:url("/img/castifi-about.png");
+}
+#cf2 img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 
-#cf6_image:hover {
-  background-image:url("/img/castifi-about.png");
+#cf2 img.transparent {
+opacity:0;
+}
+#cf_onclick {
+cursor:pointer;
 }
