--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -223,11 +223,11 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
-.projects-section {
+.project-section {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background-color: grey;
+  background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -314,7 +314,7 @@ body {
   height: 80%%;
 }
 
-#f1_container {
+#skill_container {
   position: relative;
   margin: 10px auto;
   width: 100px;
@@ -325,29 +325,29 @@ body {
   padding-bottom: 50px;
 }
 
-#f1_container {
+#skill_container {
   perspective: 1000;
 }
 
-#f1_card {
+#skill_card {
   width: 100px;
   height: 100px;
   transform-style: preserve-3d;
   transition: all 1.0s linear;
 }
 
-#f1_container:hover #f1_card {
+#skill_container:hover #skill_card {
   transform: rotateY(180deg);
 }
 
-.face {
+.skill_face {
   position: absolute;
   width: 100px;
   height: 100px;
   backface-visibility: hidden;
 }
 
-.face.back {
+.skill_face.skill_back {
   display: block;
   transform: rotateY(180deg);
   box-sizing: border-box;
@@ -414,24 +414,60 @@ body {
 }
 
 /*end carousel styling*/
-#cf2 {
-  position:relative;
-  height:50px;
-  width:50px;
-  margin:0 auto;
-}
-#cf2 img {
-  position:absolute;
-  left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+
+/*project styling*/
+
+.project {
+  max-height: 500px;
+  max-width: 500px;
 }
 
-#cf2 img.transparent {
-opacity:0;
+#project_container {
+  position: relative;
+  margin: 10px auto;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  padding-right: 75px;
+  padding-left: 75px;
+  padding-bottom: 50px;
 }
-#cf_onclick {
-cursor:pointer;
+
+#project_container {
+  perspective: 1000;
 }
+
+#project_card {
+  width: 50px;
+  height: 50px;
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
+}
+
+#project_container:hover #f1_card {
+  transform: rotateY(180deg);
+}
+
+.face {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  backface-visibility: hidden;
+}
+
+.face.back {
+  display: block;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  padding: 20px;
+  color: white;
+  line-height: 50px;
+  text-align: center;
+  background-color: black;
+}
+
+.bottom-row {
+  padding-bottom: 100px;
+}
+
+/*end project styling*/
