--- a/css/main.css
+++ b/css/main.css
@@ -372,9 +372,15 @@ body {
   padding-bottom: 10%;
   display: block;
   }
-.devicon {
-  max-width: 50%;
-  max-height: 50%;
+  .devicon {
+    max-width: 40%;
+    max-height: 40%;
+    }
+  .skill_face.skill_back {
+    font-size: 12px;
+  }
+  #skill_container:hover #skill_card {
+    transform: none !important;
   }
 }
 
