--- a/css/main.css
+++ b/css/main.css
@@ -407,3 +407,26 @@ body {
 }
 
 
+
+@media screen and (max-width: 768px) {
+  .carousel-caption p {
+    line-height: 1;
+    font-size: 12px;
+  }
+  .carousel-caption {
+      font-size: 10px;
+      font-weight: bold;
+      position: absolute;
+      /*right: 15%;*/
+      bottom: 5%;
+      /*left: 15%;*/
+      /*z-index: 10;*/
+      padding-top: 5px;
+      padding-bottom: 5px;
+      /*color: #fff;*/
+      /*text-align: center;*/
+      /*text-shadow: 0 1px 2px rgba(0, 0, 0, .6);*/
+  }
+}
+
+
