--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,7 @@ body {
     max-height: 40%;
     }
   .skill_face.skill_back {
-    font-size: 12px;
+    color: transparent;
   }
   #skill_container:hover #skill_card {
     transform: none !important;
@@ -407,7 +407,6 @@ body {
 }
 
 
-
 @media screen and (max-width: 768px) {
   .carousel-caption p {
     line-height: 1;
@@ -417,16 +416,11 @@ body {
       font-size: 10px;
       font-weight: bold;
       position: absolute;
-      /*right: 15%;*/
       bottom: 5%;
-      /*left: 15%;*/
-      /*z-index: 10;*/
       padding-top: 5px;
       padding-bottom: 5px;
-      /*color: #fff;*/
-      /*text-align: center;*/
-      /*text-shadow: 0 1px 2px rgba(0, 0, 0, .6);*/
   }
 }
 
+/*end carousel*/
 
