small tweak to carousel mobile view to help w/ h2 issue, updated resume

--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,10 @@ body {
       bottom: 5%;
       padding-top: 5px;
       padding-bottom: 5px;
+
+  }
+  .carousel-caption h2 {
+    font-size: 14px;
   }
 }
 
